# turni-pdm

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  LIVE-COLAZIONE.md  README.md  TN-UPDATE.md  app.py  debug_digits.py  docker-compose.yml  fr_stations.txt  import_turno_materiale.py  nixpacks.toml  parse_turno_materiale.py  railway.toml  requirements.txt  server.py  turni.db  turno_materiale_treni.json
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_trenord.py  0003_seed_users.py  0004_corsa_row_hash_no_unique.py  0005_programma_materiale.py  0006_localita_codice_breve.py  0007_riprogettazione_materiale.py  0008_stazioni_sosta_extra.py  0009_dormita_pdc.py  0010_giro_programma_id.py  0011_drop_programma_stagione.py  0012_sedi_trenord_canoniche.py  0013_km_giornata.py  0014_km_max_ciclo_per_regola.py  0015_festivita_ufficiale.py  0016_refactor_varianti_giri_separati.py  0017_numero_turno_40.py  (+16 more)
backend/scripts/: baseline_pre_pulizia.py  build_pde_fixture.py  pulizia_dati_prova.py  seed_dotazione_trenord.py  seed_whitelist_e_accoppiamenti.py  smoke_56_cremona.py  smoke_56_tirano.py  smoke_74_split_cv.py  smoke_75_bug5_chiuso.py
backend/tests/: test_admin_pipeline_overview.py  test_aggregazione_a2.py  test_anagrafiche_api.py  test_api_azienda_pde.py  test_api_programmi_conferma.py  test_api_programmi_variazioni.py  test_api_variazioni_applica.py  test_auth_endpoints.py  test_auth_password.py  test_auth_tokens.py  test_builder_giri.py  test_builder_pdc_eta.py  test_calendario.py  test_capacity_routing.py  test_catena.py  test_composizione.py  test_db.py  test_domain_assegnazione_persone.py  test_domain_variazioni.py  test_domain_variazioni_pde.py  test_etichetta.py  test_fusione_cluster_a1.py  test_genera_giri_api.py  test_giri_turni_pdc_list_api.py  test_holidays.py  test_live_arturo_client.py  test_main.py  test_models.py  test_multi_giornata.py  test_multi_turno_dp.py  test_pde_importer.py  test_pde_importer_db.py  test_pde_periodicita.py  test_pde_reader.py  test_pde_row_parser.py  test_persister.py  test_personale_pdc_api.py  test_pianificatore_pdc_api.py  test_pipeline_state_machine.py  test_posizionamento.py  (+11 more)
(+384 files in other folders)
